--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>593</width>
-    <height>331</height>
+    <height>416</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>About FooCoin</string>
+   <string>About AssPennies</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
@@ -50,7 +50,7 @@
           <cursorShape>IBeamCursor</cursorShape>
          </property>
          <property name="text">
-          <string>&lt;b&gt;FooCoin&lt;/b&gt; version</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;AssPennies&lt;/span&gt; version&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="textInteractionFlags">
           <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
@@ -63,7 +63,7 @@
           <cursorShape>IBeamCursor</cursorShape>
          </property>
          <property name="text">
-          <string notr="true">0.3.666-beta</string>
+          <string notr="true">1.0</string>
          </property>
          <property name="textFormat">
           <enum>Qt::RichText</enum>
@@ -98,6 +98,7 @@
           Copyright © 2009-2012 Bitcoin Developers
           Copyright © 2011-2012 Litecoin Developers
           Copyright © 2013 adam m!
+          Copyright © 2014 The AssPenny Foundation
 
           This is experimental software.
 
@@ -105,8 +106,8 @@
 
           This product includes software developed by the OpenSSL Project for use in the OpenSSL Toolkit (http://www.openssl.org/) and cryptographic software written by Eric Young (eay@cryptsoft.com) and UPnP software written by Thomas Bernard.
 
-          Website: andarazoroflove.org
-        </string>
+          Website: asspenny.org
+</string>
        </property>
        <property name="wordWrap">
         <bool>true</bool>
