--- a/src/qt/forms/addressbookpage.ui
+++ b/src/qt/forms/addressbookpage.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>760</width>
+    <width>895</width>
     <height>380</height>
    </rect>
   </property>
@@ -17,7 +17,8 @@
    <item>
     <widget class="QLabel" name="labelExplanation">
      <property name="text">
-      <string>These are your FooCoin addresses for receiving payments. You may want to give a different one to each sender so you can keep track of who is paying you.</string>
+      <string>These are your AssPenny addresses for receiving payments.
+You may want to give a different one to each sender so you can keep track of whose ass these pennies came from.</string>
      </property>
      <property name="textFormat">
       <enum>Qt::PlainText</enum>
